--- a/src/marrmotflow/templates/marrmot_models.m.jinja
+++ b/src/marrmotflow/templates/marrmot_models.m.jinja
@@ -29,7 +29,7 @@ load marrmot_data.mat
 input_climatology.precip   = marrmot_data.precip;                   % Daily data: P rate  [mm/d]
 input_climatology.temp     = marrmot_data.temp;                     % Daily data: mean T  [degree C]
 input_climatology.pet      = marrmot_data.pet;                      % Daily data: Ep rate [mm/d]
-input_climatology.delta_t  = marrmot_data.delta_t;                  % time step size of the inputs: 1 [d]
+input_climatology.delta_t  = 1;                                     % time step size of the inputs: 1 [d]
 
 %% 2. Define the model settings
 % NOTE: this example assumes that the model parameters for each model will 
@@ -77,7 +77,7 @@ for i = 1:length(model_list)
     
     % Display progress
     % ---------------------------------------------------------------------
-    disp(['Now starting model ',model,'.'])
+    disp(['Now starting model ', model, '.'])
     disp(' ')
    
     %% 4. Create each model object    
@@ -106,11 +106,11 @@ for i = 1:length(model_list)
      output_ss ,...                                                            % Internal storages
      output_waterbalance] = ...                                                % Water balance check              
                    m.get_output(...                                            % Model method to run and return all outputs
-                                input_climatology,...                          % Time series of climatic fluxes in simulation period
-                                input_s0,...                                   % Initial storages
-                                input_theta,...                                % Parameter set.
-                                input_solver_opts);                            % Options for numerical solving of ODEs
-    
+                   input_climatology,...                                       % Time series of climatic fluxes in simulation period
+                   input_s0,...                                                % Initial storages
+                   input_theta,...                                             % Parameter set.
+                   input_solver_opts);                                         % Options for numerical solving of ODEs
+
     % Save the results
     % ---------------------------------------------------------------------
     results_sampling{1+i,1} = model;
@@ -136,12 +136,11 @@ figure('color','w');
     box on;
     hold all; 
     
-    h(1) = plot(t,marrmot_data.streamflow,'k','linewidth',2);
     for i = 1:length(model_list)
         h(1+i) = plot(t,results_sampling{1+i,3}.Q);
     end
         
-    legend(h,['Observed',model_list], 'interpreter','none');
+    legend(h, model_list, 'interpreter', 'none');
     title('Model sampling results')
     ylabel('Streamflow [mm/d]')
     xlabel('Time [d]')
